# mcml_ws

./: README.md  pyproject.toml  setup_environment.txt
scripts/: authoring.docx  authoring.html  authoring.qmd  computations.html  computations.qmd  demo.html  demo.qmd
scripts/authoring_files/libs/bootstrap/: bootstrap.min.css
scripts/demo_files/libs/bootstrap/: bootstrap.min.css
