[tool.poetry]
name = "mcml-day2"
version = "0.1.0"
description = "Environment for MCML Workshop Day 2"
authors = ["Alexander Kathan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.2"
plotly = "^5.24.1"
jupyter = "^1.1.1"
numpy = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
